# CBlackJack

./: .gitignore  CBlackJack.sln  CBlackJack.vcxproj  CBlackJack.vcxproj.filters  CMakeLists.txt  card.c  card.h  cardarray.h  cardpile.c  cardpile.h  dealer.c  dealer.h  main.c  player.c  player.h  strategies.h  table.c  table.h  vector.c  vector.h
src/: card.c  cardpile.c  cardpile.h  dealer.c  dealer.h  main.c  player.c  player.h  strategies.h  table.c  table.h  vector.c  vector.h
